name:                purple-muon
version:             0.0.0.0
synopsis:            A multiplayer space game
description:         Please see README.md
homepage:            https://github.com/r-raymond/purple-muon#readme
license:             GPL-3
license-file:        LICENSE
author:              Robin Raymond
maintainer:          robin@robinraymond.de
copyright:           2016 Robin Raymond
category:            Games
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      common
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable purple-muon-client
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test
  default-language:    Haskell2010

executable purple-muon-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , common
  default-language:    Haskell2010

test-suite test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , common
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/r-raymond/purple-muon
