name:                purple-muon
version:             0.0.0.0
synopsis:            A multiplayer space game
description:         Please see README.md
homepage:            https://github.com/r-raymond/purple-muon#readme
license:             GPL-3
license-file:        LICENSE
author:              Robin Raymond
maintainer:          robin@robinraymond.de
copyright:           2016 Robin Raymond
category:            Games
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      common
  exposed-modules:     PurpleMuon.Network.Types
                     , PurpleMuon.Network.Message
                     , PurpleMuon.Network.Util
  ghc-options:         -Wall -O -Werror
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , bytestring
                     , network
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude


executable purple-muon-client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O -Werror
  build-depends:       base
                     , purple-muon
                     , protolude
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

executable purple-muon-server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O -Werror
  build-depends:       base
                     , purple-muon
                     , protolude
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/r-raymond/purple-muon
